kyberkucharka-frontend/src/styles/index.css
/* @import "tailwindcss"; */

@font-face {
  font-family: KyberFontSimple;
  font-weight: normal;
  src: url("/fonts/KyberFontSimple-Regular.ttf");
}

@font-face {
  font-family: KyberFontSimple;
  font-weight: bold;
  src: url("/fonts/KyberFontSimple-Bold.ttf");
}

@font-face {
  font-family: KyberFontSimple;
  font-weight: normal;
  font-style: italic;
  src: url("/fonts/KyberFontSimple-Italic.ttf");
}

:root {
  font-family: KyberFontSimple, sans-serif;
  line-height: 1.5;
  font-weight: 400;
  font-size: large;

  color-scheme: light dark;
  /* color: rgba(255, 255, 255, 0.87); */
  color: #1a1a1a;
  /*  background-color: #242424; */
  background-image: url("/table-texture.jpg");
  background-repeat: repeat-y;
  background-size: 100vw;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  --scale: 1;
  --main-recipe-size: 0.8;
  --card-size: 1.2;
  --fork-card-size: 1.2;
}

a {
  font-weight: 500;
  text-decoration: inherit;
  color:#1a1a1a;
}

a:hover {
  transform: rotate(2deg) scale(1.02);
  color:#1a1a1a;
}


body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;

  /* always show scrollbar */
  overflow-y: scroll;
  overflow-x: hidden;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

#root {
  /*   max-width: 1280px; */
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
  padding: 0;
  min-height: 100vh;
}

nav {
  margin: auto;
  width: 96vw;

  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  text-align: center;

  background-image: url("/top.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: bottom;
  opacity: 0.95;

  padding-top: 0vw;
  padding-left: 2vw;
  padding-right: 1vw;
  padding-bottom: 15px;
}

nav * {
  display: inline-block;
  margin-top: auto;
  margin-bottom: auto;
}

.logo {
  margin: 0;
  padding-top: 0;
  height: calc(120px * var(--scale));
}

.logo:hover {
  transform: rotate(1deg) scale(1.02);
}

.logo-link:hover {
  transform: none;
}

.links {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-content: center;
  margin-top: 20px;
  margin-bottom: 30px;
}

.links > * {
  display: block;
  margin-left: 10pt;
  margin-right: 10pt;
}

.links * {
  font-weight: bold;
}

.userpage-link * {
  font-size: 24px;
  display: inline-flex;
}


.form-error {
  color: orange;
}

.cancel-button {
  margin-left: auto;
  margin-right: 0;
  margin-bottom: 1vw;
  height: 50px;
}

.cancel-x:hover {
  transform: rotate(5deg) scale(1.1);
}

.inlined {
  display: inline;
}

/* TABLES */
.ingredients-table {
  margin: auto;
  margin-bottom: 20px;
}

table,
th,
td {
  border: 1px solid black;
  border-collapse: collapse;
  padding: 0 2vw;
  background-color: rgba(245, 222, 179, 0.5);
}

.tr-unverified {
  color: red;
}

.td-clickable:hover {
  text-decoration: underline;
}

.plus {
  margin-bottom: 20px;
}

.plus:hover {
  transform: rotate(5deg) scale(1.1);
  cursor: pointer;
}

.no-rotate:hover {
  transform: none;
}

.user-page p {
  font-size: 24px;
}

.about {
  padding-left: 20%;
}

.about a {
  display: inline-block;
  text-shadow: 0px 0px calc(0.4vw * var(--main-recipe-size)) #2a2a2a;
}

.react-tooltip {
  z-index: 10;
}

@media only screen and (max-width: 1500px) {
  :root {
    --main-recipe-size: 1.0;
  }
  .about {
    padding-left: 10%;
  }
}

@media only screen and (max-width: 1000px) {
  :root {
    --main-recipe-size: 1.4;
  }
  .about {
    padding-left: 0%;
  }
}

@media only screen and (max-width: 600px) {
  :root {
    --scale: 0.6;
    --card-size: 0.7;
  }

  nav {
    flex-direction: column;
  }

  .user-div {
    flex-direction: column;
  }

  h1 {
    font-size: 2em;
  }

  .links {
    flex-direction: column;
  }
}

